--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -3,5 +3,7 @@
   "mobileProd": "6384389158112",
   "mobileNonProd": "6384389158112",
   "cameraProd": "6384085229112",
-  "cameraNonProd": "6384389158112"
+  "cameraNonProd": "6384389158112",
+  "state" : "live"
+  "prePostContent" : 1
 }
