--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -4,6 +4,6 @@
   "mobileNonProd": "6384389158112",
   "cameraProd": "6384085229112",
   "cameraNonProd": "6384389158112",
-  "state" : "live"
+  "state" : "live",
   "prePostContent" : 1
 }
