--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -4,7 +4,7 @@
   "mobileNonProd": "6384389158112",
   "cameraProd": "6384085229112",
   "cameraNonProd": "6384389158112",
-  "state": "pre-live",
+  "state": "live",
   "prePostContentType": 2,
   "prePostcontentURL": "https://cdn.pixabay.com/video/2024/08/16/226795_large.mp4"
 }
