--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -6,7 +6,7 @@
       "languages": {
         "en": {
           "mediaType": "image",
-          "mediaUrl": "",
+          "mediaUrl": "https://images.unsplash.com/photo-1615440321449-83897161d806?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGZlcnJhcml8ZW58MHx8MHx8fDA%3D",
           "mediaTitle": "",
           "mediaLoop": true
         },
