--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -1,8 +1,8 @@
 {
   "camera": {
     "prod": {
-      "videoId": "6386317292112",
-      "state": "preLive",
+      "videoId": "6384389158112",
+      "state": "live",
       "languages": {
         "en": {
           "mediaType": "image",
