--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -31,7 +31,7 @@
         "en": {
           "mediaType": "video",
           "mediaUrl": "https://cdn.pixabay.com/video/2024/08/16/226795_large.mp4",
-          "mediaTitle": "",
+          "mediaTitle": "check check",
           "mediaLoop": true
         },
         "it": {
