--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -19,7 +19,7 @@
         "kk": {
           "mediaType": "image",
           "mediaUrl": "https://i.pinimg.com/736x/7a/4a/45/7a4a45ecb7e8254892665d97f82a1706.jpg",
-          "mediaTitle": "",
+          "mediaTitle": "check Camera Prod kk",
           "mediaLoop": true
         }
       }
