--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -3,7 +3,7 @@
     "prod": {
       "videoId": "6384389158112",
       "state": "live",
-      "languages": {
+      "locales": {
         "en": {
           "mediaType": "image",
           "mediaUrl": "https://images.unsplash.com/photo-1615440321449-83897161d806?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGZlcnJhcml8ZW58MHx8MHx8fDA%3D",
@@ -27,7 +27,7 @@
     "nonProd": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "languages": {
+      "locales": {
         "en": {
           "mediaType": "video",
           "mediaUrl": "https://cdn.pixabay.com/video/2024/08/16/226795_large.mp4",
@@ -53,7 +53,7 @@
     "prod": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "languages": {
+      "locales": {
         "en": {
           "mediaType": "image",
           "mediaUrl": "https://images.unsplash.com/photo-1615440321449-83897161d806?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGZlcnJhcml8ZW58MHx8MHx8fDA%3D",
@@ -77,7 +77,7 @@
     "nonProd": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "languages": {
+      "locales": {
         "en": {
           "mediaType": "image",
           "mediaUrl": "https://images.unsplash.com/photo-1615440321449-83897161d806?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGZlcnJhcml8ZW58MHx8MHx8fDA%3D",
