--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -2,7 +2,7 @@
   "camera": {
     "prod": {
       "videoId": "6386591233112",
-      "state": "live",
+      "state": "preLive",
       "polling": {
         "preLive": 10,
         "live": 30,
