--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -3,7 +3,7 @@
     "prod": {
       "videoId": "6386591233112",
       "state": "live",
-      "polling": {
+      "intervals": {
         "preLive": 10,
         "live": 30,
         "postLive": 10
@@ -32,7 +32,7 @@
     "nonProd": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "polling": {
+      "intervals": {
         "preLive": 10,
         "live": 30,
         "postLive": 10
@@ -63,7 +63,7 @@
     "prod": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "polling": {
+      "intervals": {
         "preLive": 10,
         "live": 30,
         "postLive": 10
@@ -92,7 +92,7 @@
     "nonProd": {
       "videoId": "6386317292112",
       "state": "preLive",
-      "polling": {
+      "intervals": {
         "preLive": 10,
         "live": 30,
         "postLive": 10
