--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -2,7 +2,7 @@
   "camera": {
     "prod": {
       "videoId": "6386318082112",
-      "state": "postLive",
+      "state": "live",
       "intervals": {
         "preLive": 10,
         "live": 30,
