--- a/LiveStream_config.json
+++ b/LiveStream_config.json
@@ -43,8 +43,8 @@
       }
     },
     "nonProd": {
-      "liveVideoId": "6384389158112",
-      "liveVideoOrientation": "portrait",
+      "liveVideoId": "6389073700112",
+      "liveVideoOrientation": "landscape",
       "liveMediaTitle": "",
       "liveMediaSubTitle": "",
       "state": "postLive",
